--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -2,58 +2,180 @@
 
 @custom-variant dark (&:is(.dark *));
 
-@theme {
-  --font-sans:
-    Inter, ui-sans-serif, system-ui, sans-serif, Apple Color Emoji,
-    Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+:root {
+  --background: oklch(0.994 0 0);
+  --foreground: oklch(0 0 0);
+  --card: oklch(0.994 0 0);
+  --card-foreground: oklch(0 0 0);
+  --popover: oklch(0.9911 0 0);
+  --popover-foreground: oklch(0 0 0);
+  --primary: oklch(0.6858 0.2652 343.7084);
+  --primary-foreground: oklch(1 0 0);
+  --secondary: oklch(0.9512 0.0102 311.1764);
+  --secondary-foreground: oklch(0.1344 0 0);
+  --muted: oklch(0.9702 0 0);
+  --muted-foreground: oklch(0.4386 0 0);
+  --accent: oklch(0.9375 0.0441 315.4676);
+  --accent-foreground: oklch(0.5288 0.2555 305.8752);
+  --destructive: oklch(0.8867 0.1653 107.8366);
+  --destructive-foreground: oklch(1 0 0);
+  --border: oklch(0.9354 0.0119 325.672);
+  --input: oklch(0.9401 0 0);
+  --ring: oklch(0 0 0);
+  --chart-1: oklch(0.6253 0.1127 247.3014);
+  --chart-2: oklch(0.6858 0.2652 343.7084);
+  --chart-3: oklch(0.9044 0.2361 130.934);
+  --chart-4: oklch(0.5679 0.2507 308.1368);
+  --chart-5: oklch(0.559 0 0);
+  --sidebar: oklch(0.9741 0.0085 308.3633);
+  --sidebar-foreground: oklch(0 0 0);
+  --sidebar-primary: oklch(0 0 0);
+  --sidebar-primary-foreground: oklch(1 0 0);
+  --sidebar-accent: oklch(0.9401 0 0);
+  --sidebar-accent-foreground: oklch(0 0 0);
+  --sidebar-border: oklch(0.9401 0 0);
+  --sidebar-ring: oklch(0 0 0);
+  --font-sans: Plus Jakarta Sans, sans-serif;
+  --font-serif: Lora, serif;
+  --font-mono: IBM Plex Mono, monospace;
+  --radius: 0.75rem;
+  --shadow-2xs: 0px 2px 3px 0px hsl(0 0% 10.1961% / 0.08);
+  --shadow-xs: 0px 2px 3px 0px hsl(0 0% 10.1961% / 0.08);
+  --shadow-sm:
+    0px 2px 3px 0px hsl(0 0% 10.1961% / 0.16),
+    0px 1px 2px -1px hsl(0 0% 10.1961% / 0.16);
+  --shadow:
+    0px 2px 3px 0px hsl(0 0% 10.1961% / 0.16),
+    0px 1px 2px -1px hsl(0 0% 10.1961% / 0.16);
+  --shadow-md:
+    0px 2px 3px 0px hsl(0 0% 10.1961% / 0.16),
+    0px 2px 4px -1px hsl(0 0% 10.1961% / 0.16);
+  --shadow-lg:
+    0px 2px 3px 0px hsl(0 0% 10.1961% / 0.16),
+    0px 4px 6px -1px hsl(0 0% 10.1961% / 0.16);
+  --shadow-xl:
+    0px 2px 3px 0px hsl(0 0% 10.1961% / 0.16),
+    0px 8px 10px -1px hsl(0 0% 10.1961% / 0.16);
+  --shadow-2xl: 0px 2px 3px 0px hsl(0 0% 10.1961% / 0.4);
+  --tracking-normal: -0.025em;
+  --spacing: 0.25rem;
+}
 
-  --radius-lg: var(--radius);
-  --radius-md: calc(var(--radius) - 2px);
+.dark {
+  --background: oklch(0.2229 0.0089 317.6981);
+  --foreground: oklch(0.9551 0 0);
+  --card: oklch(0.2584 0.0109 319.4558);
+  --card-foreground: oklch(0.9551 0 0);
+  --popover: oklch(0.2584 0.0109 319.4558);
+  --popover-foreground: oklch(0.9551 0 0);
+  --primary: oklch(0.7242 0.2298 341.3248);
+  --primary-foreground: oklch(1 0 0);
+  --secondary: oklch(0.2963 0.0188 318.6677);
+  --secondary-foreground: oklch(0.9551 0 0);
+  --muted: oklch(0.2963 0.0188 318.6677);
+  --muted-foreground: oklch(0.7058 0 0);
+  --accent: oklch(0.2718 0.057 311.6502);
+  --accent-foreground: oklch(0.6983 0.195 303.4465);
+  --destructive: oklch(0.6129 0.2148 26.3228);
+  --destructive-foreground: oklch(1 0 0);
+  --border: oklch(0.329 0.0139 316.3979);
+  --input: oklch(0.329 0.0139 316.3979);
+  --ring: oklch(0.7242 0.2298 341.3248);
+  --chart-1: oklch(0.6979 0.1185 237.1682);
+  --chart-2: oklch(0.7242 0.2298 341.3248);
+  --chart-3: oklch(0.9718 0.1082 108.2546);
+  --chart-4: oklch(0.6502 0.2291 310.3474);
+  --chart-5: oklch(0.7058 0 0);
+  --sidebar: oklch(0.2138 0.0074 325.8329);
+  --sidebar-foreground: oklch(0.9551 0 0);
+  --sidebar-primary: oklch(0.7242 0.2298 341.3248);
+  --sidebar-primary-foreground: oklch(1 0 0);
+  --sidebar-accent: oklch(0.2963 0.0188 318.6677);
+  --sidebar-accent-foreground: oklch(0.7242 0.2298 341.3248);
+  --sidebar-border: oklch(0.329 0.0139 316.3979);
+  --sidebar-ring: oklch(0.7242 0.2298 341.3248);
+  --font-sans: Plus Jakarta Sans, sans-serif;
+  --font-serif: Lora, serif;
+  --font-mono: IBM Plex Mono, monospace;
+  --radius: 0.75rem;
+  --shadow-2xs: 0px 2px 3px 0px hsl(0 0% 10.1961% / 0.08);
+  --shadow-xs: 0px 2px 3px 0px hsl(0 0% 10.1961% / 0.08);
+  --shadow-sm:
+    0px 2px 3px 0px hsl(0 0% 10.1961% / 0.16),
+    0px 1px 2px -1px hsl(0 0% 10.1961% / 0.16);
+  --shadow:
+    0px 2px 3px 0px hsl(0 0% 10.1961% / 0.16),
+    0px 1px 2px -1px hsl(0 0% 10.1961% / 0.16);
+  --shadow-md:
+    0px 2px 3px 0px hsl(0 0% 10.1961% / 0.16),
+    0px 2px 4px -1px hsl(0 0% 10.1961% / 0.16);
+  --shadow-lg:
+    0px 2px 3px 0px hsl(0 0% 10.1961% / 0.16),
+    0px 4px 6px -1px hsl(0 0% 10.1961% / 0.16);
+  --shadow-xl:
+    0px 2px 3px 0px hsl(0 0% 10.1961% / 0.16),
+    0px 8px 10px -1px hsl(0 0% 10.1961% / 0.16);
+  --shadow-2xl: 0px 2px 3px 0px hsl(0 0% 10.1961% / 0.4);
+}
+
+@theme inline {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-destructive-foreground: var(--destructive-foreground);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
+
+  --font-sans: var(--font-sans);
+  --font-mono: var(--font-mono);
+  --font-serif: var(--font-serif);
+
   --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
 
-  --color-discordbg: #2f3136;
-  --color-embedbg: #34363b;
-  --color-background: hsl(var(--background));
-  --color-foreground: hsl(var(--foreground));
+  --shadow-2xs: var(--shadow-2xs);
+  --shadow-xs: var(--shadow-xs);
+  --shadow-sm: var(--shadow-sm);
+  --shadow: var(--shadow);
+  --shadow-md: var(--shadow-md);
+  --shadow-lg: var(--shadow-lg);
+  --shadow-xl: var(--shadow-xl);
+  --shadow-2xl: var(--shadow-2xl);
 
-  --color-card: hsl(var(--card));
-  --color-card-foreground: hsl(var(--card-foreground));
-
-  --color-popover: hsl(var(--popover));
-  --color-popover-foreground: hsl(var(--popover-foreground));
-
-  --color-primary: hsl(var(--primary));
-  --color-primary-foreground: hsl(var(--primary-foreground));
-
-  --color-secondary: hsl(var(--secondary));
-  --color-secondary-foreground: hsl(var(--secondary-foreground));
-
-  --color-muted: hsl(var(--muted));
-  --color-muted-foreground: hsl(var(--muted-foreground));
-
-  --color-accent: hsl(var(--accent));
-  --color-accent-foreground: hsl(var(--accent-foreground));
-
-  --color-destructive: hsl(var(--destructive));
-  --color-destructive-foreground: hsl(var(--destructive-foreground));
-
-  --color-border: hsl(var(--border));
-  --color-input: hsl(var(--input));
-  --color-ring: hsl(var(--ring));
-
-  --color-chart-1: hsl(var(--chart-1));
-  --color-chart-2: hsl(var(--chart-2));
-  --color-chart-3: hsl(var(--chart-3));
-  --color-chart-4: hsl(var(--chart-4));
-  --color-chart-5: hsl(var(--chart-5));
-
-  --animate-gradient: gradient 8s linear infinite;
-
-  @keyframes gradient {
-    to {
-      background-position: var(--bg-size) 0;
-    }
-  }
+  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
+  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
+  --tracking-normal: var(--tracking-normal);
+  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
+  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
+  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
 }
 
 /*
@@ -80,57 +202,71 @@
     @media (prefers-color-scheme: dark) {
       color-scheme: dark;
     }
+    letter-spacing: var(--tracking-normal);
   }
-}
 
-@layer base {
-  :root {
-    --background: 224 100% 95%;
-    --foreground: 224 5% 3%;
-    --card: 224 50% 90%;
-    --card-foreground: 224 5% 10%;
-    --popover: 224 100% 95%;
-    --popover-foreground: 224 100% 3%;
-
-    --primary: 303 68% 62%;
-    --primary-foreground: 303 6.800000000000001% 6.2%;
-
-    --secondary: 303 34% 18.6%;
-    --secondary-foreground: 303 6.800000000000001% 98.1%;
-
-    --accent: 303 34% 18.6%;
-    --accent-foreground: 303 6.800000000000001% 98.1%;
-
-    --destructive: 0 100% 30%;
-    --destructive-foreground: 224 5% 90%;
-    --border: 224 30% 50%;
-    --input: 224 30% 18%;
-    --ring: 224 81% 53%;
-    --radius: 0.5rem;
+  .rounded-ele {
+    border-radius: var(--radius-lg);
   }
-  .dark {
-    --background: 224 50% 5%;
-    --foreground: 224 5% 90%;
-    --card: 224 50% 3%;
-    --card-foreground: 224 5% 90%;
-    --popover: 224 50% 5%;
-    --popover-foreground: 224 5% 90%;
 
-    --primary: 303 68% 62%;
-    --primary-foreground: 303 6.800000000000001% 6.2%;
+  .rounded-card {
+    border-radius: var(--radius-lg);
+  }
 
-    --secondary: 303 34% 18.6%;
-    --secondary-foreground: 303 6.800000000000001% 98.1%;
+  .rounded-sm-ele {
+    border-radius: var(--radius-sm);
+  }
 
-    --accent: 303 34% 18.6%;
-    --accent-foreground: 303 6.800000000000001% 98.1%;
+  .rounded-md-ele {
+    border-radius: var(--radius-md);
+  }
 
-    --destructive: 0 100% 30%;
-    --destructive-foreground: 224 5% 90%;
-    --border: 224 30% 18%;
-    --input: 224 30% 18%;
-    --ring: 224 81% 53%;
-    --radius: 0.5rem;
+  .rounded-lg-ele {
+    border-radius: var(--radius-lg);
+  }
+
+  .rounded-xl-ele {
+    border-radius: var(--radius-xl);
+  }
+
+  .rounded-t-ele {
+    border-top-left-radius: var(--radius-lg);
+    border-top-right-radius: var(--radius-lg);
+  }
+
+  .rounded-b-ele {
+    border-bottom-left-radius: var(--radius-lg);
+    border-bottom-right-radius: var(--radius-lg);
+  }
+
+  .rounded-s-ele {
+    border-start-start-radius: var(--radius-lg);
+    border-end-start-radius: var(--radius-lg);
+  }
+
+  .rounded-e-ele {
+    border-start-end-radius: var(--radius-lg);
+    border-end-end-radius: var(--radius-lg);
+  }
+
+  .rounded-tl-ele {
+    border-top-left-radius: var(--radius-lg);
+  }
+
+  .rounded-tr-ele {
+    border-top-right-radius: var(--radius-lg);
+  }
+
+  .rounded-bl-ele {
+    border-bottom-left-radius: var(--radius-lg);
+  }
+
+  .rounded-br-ele {
+    border-bottom-right-radius: var(--radius-lg);
+  }
+
+  .rounded-2xl-ele {
+    border-radius: calc(var(--radius-xl) + 4px);
   }
 }
 
