--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -204,6 +204,17 @@
     }
     letter-spacing: var(--tracking-normal);
   }
+  @keyframes shine {
+    0% {
+      background-position: 100%;
+    }
+    100% {
+      background-position: -100%;
+    }
+  }
+  .animate-shine {
+    animation: shine 5s linear infinite;
+  }
 }
 
 @layer base {
